--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,7 +6,7 @@
   <body>
 
     {% include header.html %}
-
+    <img id="ireland" src="https://www.dropbox.com/s/am8fq2c0idptfw9/Ireland.JPG?raw=1"/>
     <div class="page-content">
       <div class="wrapper">
         {{ content }}
