--- a/css/main.scss
+++ b/css/main.scss
@@ -51,3 +51,10 @@ $on-laptop:        800px;
         "layout",
         "syntax-highlighting"
 ;
+
+#ireland {
+   width: 480px;
+   height: 320px;
+   padding: 0px;
+   border: 5px solid #E4C931;
+}
