--- a/css/main.scss
+++ b/css/main.scss
@@ -56,5 +56,6 @@ $on-laptop:        800px;
    width: 480px;
    height: 320px;
    padding: 0px;
-   border: 5px solid #E4C931;
+   border: 2px solid black;
+   margin: auto;
 }
