Move pic css to layout.scss

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -195,6 +195,15 @@
 }
 
 
+#ireland {
+   width: 480px;
+   height: 320px;
+   padding: 0px;
+   border: 2px solid black;
+   margin: auto;
+}
+
+
 
 /**
  * Posts
