--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,7 +8,7 @@
     {% include header.html %}
     <div class="page-content">
       <div class="wrapper">
-        <img id="ireland" src="https://www.dropbox.com/s/am8fq2c0idptfw9/Ireland.JPG?raw=1"/>
+        <!-- <img id="ireland" src="https://www.dropbox.com/s/am8fq2c0idptfw9/Ireland.JPG?raw=1"/> -->
         {{ content }}
       </div>
     </div>
